--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
+    "cors": "^2.8.5",
     "csurf": "^1.11.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
